--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,8 @@
 
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
-
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyAVkY_fES5sotW5uSdz7AB98PV_j9uXcB8">
+  </script>
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
@@ -40,6 +41,5 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-
 </body>
 </html>
